--- a/Proyecto_Final/index.html
+++ b/Proyecto_Final/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Proyecto CV</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <head>
@@ -21,16 +27,19 @@
     </head>
     <main>
       <section>
-        <div>
-          <img id="picture" src="#####" alt="Imagen de perfil" />
-        </div>
         <h2>DATOS PERSONALES</h2>
-        <div>
-          <ul>
-            <li id="nombre"></li>
-            <li id="apellido"></li>
-            <li id="titulo"></li>
-          </ul>
+        <div id="cargando" class="spinner-border" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+            <img id="picture" src="#####" alt="Imagen de perfil" />
+          </div>
+          <div>
+            <ul id="datos">
+              <li id="nombre"></li>
+              <li id="apellido"></li>
+              <li id="titulo"></li>
+            </ul>
+          </div>
         </div>
       </section>
       <section>
@@ -66,6 +75,11 @@
       crossorigin="anonymous"
     ></script>
     <script src="./js/API_fetch.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
 
