terminado - api rest

--- a/Proyecto_Final/datos.html
+++ b/Proyecto_Final/datos.html
@@ -35,9 +35,9 @@
 
           <div>
             <a href="./datos.html" class="link-dark">DATOS</a>
-            <a href="./experiencia.html" class="link-dark">EXPERIENCIAS</a>
-            <a href="./habilidades.html" class="link-dark">HABILIDADES</a>
-            <a href="./contacto.html" class="link-dark">| CONTACTO</a>
+            <a href="experiencia.html" class="link-dark">EXPERIENCIAS</a>
+            <a href="habilidades.html" class="link-dark">HABILIDADES</a>
+            <a href="contacto.html" class="link-dark">| CONTACTO</a>
           </div>
         </div>
       </nav>
@@ -58,30 +58,8 @@
           <span class="visually-hidden">Loading...</span>
         </div>
       </section>
-      <section class="container">
-        <div>
-          <h2>EXPERIENCIAS</h2>
-        </div>
-        <div>
-          <ul>
-            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-            <li>Nulla egestas dolor a condimentum lobortis.</li>
-            <li>Nam tempus ipsum in felis euismod blandit.</li>
-          </ul>
-        </div>
-      </section>
-      <section class="container">
-        <div>
-          <h2>HABILIDADES</h2>
-        </div>
-        <div>
-          <ul>
-            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-            <li>Nulla egestas dolor a condimentum lobortis.</li>
-            <li>Nam tempus ipsum in felis euismod blandit.</li>
-          </ul>
-        </div>
-      </section>
+      <div class="modal-dialog modal-lg">...</div>
+
     </main>
     <footer>
       <div>
@@ -111,8 +89,3 @@
     <script src="./js/API_fetch.js"></script>
   </body>
 </html>
-
-<!--Pendientes:
-
-
--->
