--- a/Proyecto_Final/contacto.html
+++ b/Proyecto_Final/contacto.html
@@ -42,47 +42,7 @@
         </div>
       </nav>
     </head>
-    <main class="flex-shrink-0">
-      <section class="container">
-        <h2>DATOS PERSONALES</h2>
-        <div class="container-fluid">
-          <img id="picture" alt="Imagen de perfil" />
-          <ul id="datos">
-            <li id="nombre"></li>
-            <li id="apellido"></li>
-            <li id="titulo"></li>
-          </ul>
-        </div>
-
-        <div id="cargando" class="spinner-border" role="status">
-          <span class="visually-hidden">Loading...</span>
-        </div>
-      </section>
-      <section class="container">
-        <div>
-          <h2>EXPERIENCIAS</h2>
-        </div>
-        <div>
-          <ul>
-            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-            <li>Nulla egestas dolor a condimentum lobortis.</li>
-            <li>Nam tempus ipsum in felis euismod blandit.</li>
-          </ul>
-        </div>
-      </section>
-      <section class="container">
-        <div>
-          <h2>HABILIDADES</h2>
-        </div>
-        <div>
-          <ul>
-            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-            <li>Nulla egestas dolor a condimentum lobortis.</li>
-            <li>Nam tempus ipsum in felis euismod blandit.</li>
-          </ul>
-        </div>
-      </section>
-    </main>
+    <main class="flex-shrink-0"></main>
     <footer>
       <div>
         <span class="text-muted"
@@ -111,8 +71,3 @@
     <script src="./js/API_fetch.js"></script>
   </body>
 </html>
-
-<!--Pendientes:
-
-
--->
